# rust-meets-amqp

./: Cargo.toml  Dockerfile  README.md  amqp-chart.yaml  docker-compose.yaml  start_amqp.sh
.github/workflows/: merge-with-refactoring.yml  rust.yml
spec/: design_criteria.md  design_criteria_broker.md  task.md
src/: main.rs
