[package]
name = "amqp-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
sha2 = "0.10"

# SQLx with proper runtime features
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",  # Use tokio runtime with rustls
    "sqlite",                # SQLite database support
    "macros",               # SQL macros
    "migrate"               # Database migrations
] }
sqlx-cli = { version = "0.8.6", features = ["sqlite"] }

# Unix-specific dependencies for password input
[target.'cfg(unix)'.dependencies]
libc = "0.2"
