[package]
name = "amqp-client"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "amqp-client"
path = "src/main.rs"

[dependencies]
clap = { version = ">=4", features = ["derive"] }
uuid = { version = ">=1", features = ["v4"] }
tokio = { version = ">=1", features = ["full"] }
thiserror = ">=1"
sqlx = { version = ">=0.8.6", features = ["sqlite", "macros"] }
sha2 = ">=0.10.9"
serde = ">=1.0.219"
rand = ">=0.9.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
